--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="weatherAPI/index.css">
 </head>
 <body>
     <div class="container">
@@ -23,7 +23,7 @@
         </section>
     </div>
 
-    <script src="index.js"></script>
+    <script src="weatherAPI/index.js"></script>
 </body>
 </html>
 
